# clearpass-api

./: .gitignore  .mypy.ini  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-test.in  requirements-test.txt
.github/workflows/: test.yml  tests.yml
cassettes/: test_404_disable_mac.yaml  test_404_enable_mac.yaml  test_connectivity.yaml  test_disable_mac.yaml  test_disconnect_mac_address.yaml  test_disconnect_mac_not_found.yaml  test_enable_mac.yaml  test_failed_connectivity.yaml  test_get_info_for_mac_address.yaml
src/clearpass/: __init__.py  client.py  exceptions.py
tests/: conftest.py  test_connector.py
